2004-10-06  Patrice Dumas  <dumas@centre-cired.fr>

	* Makefile.am: use $(PERL) and $(srcdir) in manage_i18n.pl rule
	(idea of Karl Berry).

2004-08-13  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl, texi2html.init: Cross refs are done according to the 
	specification presented in the texinfo manual in the node HTML Xref.
	The "external source of information" is also used although it isn't
	formally part of the specification.
	Handle novalidate better.
	* Tests: sync.

2004-08-07  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl, texi2html.init: handle @slanted and @abbr.

2004-06-27  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl, T2h_i18n.pm, manage_i18n.pl: Re enable compatibility 
	with perl older that 5.6, by changing most of our to use vars, and 
	some other to my.

2004-06-13  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl: split close_stack in 2, one for the last pass the other
	for the previous passes.
	Simplification of the code handling paragraph closing.
	More macros don't begin paragraphs.
	Pass opened commands through @tab and @item.
	Every @def* is considered to have arguments.
	continue the @def* line if there is a @ at the end line.
	* texi2html.pl, texi2html.init: Handle @float, @listoffloats, 
	@caption, @shortcaption,
	@ordf, @ordm, @registeredsymbol, @deftypecv, @LaTeX, @indicateurl,
	@docbook, @ifdocbook, @ifnotdocbook,
	@comma, @headitem, @quotation second arg, @acronym second arg.
	@url is now a synonym for @uref.
	* doc/texi2html.texi: bring up-to-date.

2004-04-28  Patrice Dumas  <dumas@centre-cired.fr> 

	* T2h_i18n.pl, texi2html.pl: pass the state to the internationalized
	strings if needed. 

2004-04-28  Patrice Dumas  <dumas@centre-cired.fr> 
	
	* texi2html.init, texi2html.pl: generate unformatted text with 
	text protected and %unformatted_text_* hashs used.
	use unformatted text in <title> element.
	put preparation of special styles in texi2html.init.